--- a/web/components/package.json
+++ b/web/components/package.json
@@ -8,7 +8,9 @@
     "@leaf/apis": "workspace:^1.0.0",
     "@leaf/icons": "workspace:^1.0.0",
     "@leaf/utils": "workspace:^1.0.0",
-    "vue": "^3.2.41"
+    "dashjs": "^4.5.1",
+    "vue": "^3.2.41",
+    "vue-wplayer": "^0.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
