--- a/web/packages/web-client/package.json
+++ b/web/packages/web-client/package.json
@@ -14,6 +14,7 @@
     "@leaf/components": "workspace:^1.0.0",
     "@leaf/icons": "workspace:^1.0.0",
     "@leaf/utils": "workspace:^1.0.0",
+    "js-base64": "^3.7.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
