--- a/web/packages/web-client/package.json
+++ b/web/packages/web-client/package.json
@@ -17,6 +17,7 @@
     "js-base64": "^3.7.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
+    "vue-dompurify-html": "^3.1.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
