--- a/web/packages/manage-client/package.json
+++ b/web/packages/manage-client/package.json
@@ -15,6 +15,7 @@
     "@leaf/components": "workspace:^1.0.0",
     "@leaf/icons": "workspace:^1.0.0",
     "@leaf/utils": "workspace:^1.0.0",
+    "dashjs": "^4.5.1",
     "naive-ui": "^2.33.5",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
