--- a/web/packages/web-client/package.json
+++ b/web/packages/web-client/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-dompurify-html": "^3.1.2",
+    "vue-i18n": "9.3.0-beta.16",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
