build: 修改构建配置

--- a/web/packages/manage-client/package.json
+++ b/web/packages/manage-client/package.json
@@ -18,6 +18,7 @@
     "dashjs": "^4.5.1",
     "naive-ui": "^2.33.5",
     "pinia": "^2.0.28",
+    "terser": "^5.16.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
