fix: 修复默认配置文件错误

--- a/data/config/application.yml
+++ b/data/config/application.yml
@@ -61,7 +61,7 @@ redis:
   # redis密码（修改要同时修改docker-compose.yml中对应的密码）
   password: LeafRedis123
   port: 6379
-server:
+security:
   jwt_secret:
 user:
   prefix: user_
