--- a/web/packages/mobile-client/package.json
+++ b/web/packages/mobile-client/package.json
@@ -33,6 +33,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-top-level-await": "^1.3.1",
     "vue-tsc": "^1.0.12"
   }
 }
