--- a/web/packages/web-client/package.json
+++ b/web/packages/web-client/package.json
@@ -35,6 +35,7 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
+    "vite-plugin-top-level-await": "^1.3.1",
     "vue-picture-cropper": "^0.5.1",
     "vue-tsc": "^1.0.8"
   }
