--- a/web/apis/tsconfig.json
+++ b/web/apis/tsconfig.json
@@ -13,7 +13,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "importsNotUsedAsValues": "error",
+    "preserveValueImports": true
   },
   "include": ["src"]
 }
